@@ -4247,6 +4247,17 @@ cz) 6100 $\rightarrow$ 6120
 \end{quote}
 Der IM6120 unterst"utzt einen gr"o"seren Adre"sraum (32K
 anstelle 4K) sowie zus"atzliche Maschinenbefehle.
+%%-----------
+\begin{quote}
+da) SC61860
+\end{quote}
+Dies ist der in den meisten Sharp Pocket Computern (PC-12xx...PC-15xx) verbaute
+Prozessor.
+%%-----------
+\begin{quote}
+db) SC62015
+\end{quote}
+Dies ist der im Sharp PC-E500 verbaute Prozessor.
 
 Beim CPU-Befehl mu"s der Prozessortyp als einfaches Literal
 angegeben werden, eine Berechnung \`a la
