@@ -4132,6 +4132,15 @@ cz) 6100 $\rightarrow$ 6120
 \end{quote}
 The IM6120 supports a larger address space (32K
 instead of 4K) and additional machine instructions.
+\begin{quote}
+da) SC61860
+\end{quote}
+This is the processor used in the Sharp PC-12xx...PC-15xx pocket computers.
+%%-----------
+\begin{quote}
+db) SC62015
+\end{quote}
+This is the processor used in the  Sharp PC-E500.
 
 The \tty{CPU} instruction needs the processor type as a simple literal, a
 calculation like:
